--- a/css/styles.css
+++ b/css/styles.css
@@ -2,6 +2,9 @@ body {
   max-width: 320px;
   margin: auto;
   background: #ddd;
+  background: #fff;
+  border-left: 1px solid black;
+  border-right: 1px solid black;
 }
 
 img {
