--- a/css/styles.css
+++ b/css/styles.css
@@ -11,3 +11,12 @@ img {
   display: block;
   max-width: 100%;
 }
+header {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  margin-bottom: 30px;
+  background: pink;
+  pad: 0 20px;
+  position: sticky;
+  top: 0;
