--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,6 @@
 body {
   max-width: 320px;
   margin: auto;
-  background: #ddd;
   background: #fff;
   border-left: 1px solid black;
   border-right: 1px solid black;
@@ -11,6 +10,18 @@ img {
   display: block;
   max-width: 100%;
 }
+
+.chatbox-container {
+  max-width: 300px;
+  margin: auto;
+  font-family: 'IBM Plex Sans', sans-serif; 
+}
+
+main div p {
+  padding:2px;
+  margin: 2px;
+}
+
 header {
   display: flex;
   justify-content: space-around;
@@ -20,3 +31,19 @@ header {
   pad: 0 20px;
   position: sticky;
   top: 0;
+}
+
+.Yuna {
+  background: #ee00FF;
+  border-radius: 15px 15px 0 15px;
+  margin: 0 0px 10px 90px; 
+  padding: 5px 20px;
+  
+}
+
+.Dorian {
+  background: #9933FF;
+  border-radius: 15px 15px 15px 0;
+  margin: 0 90px 10px 0;
+  padding: 5px 20px;
+} 
